# SpeakerMachine

./: .gitignore  README.md  SpeakerMachine.sln
.github/workflows/: rust.yml
Packet/: Request.cs
SpeakerMachine/: MainForm.Designer.cs  MainForm.cs  Program.cs  SpeakerMachine.csproj
SpeakerS/: Program.cs  SpeakerS.csproj
SpeakerWeb/: Program.cs
SpeakerWeb/Components/: App.razor  _Imports.razor
SpeakerWeb/Components/Pages/: Home.razor  Home.razor.cs
SpeakerWeb/Properties/: launchSettings.json
server/: Cargo.toml
server/src/: main.rs  structs.rs
server/src/static/: 404.html  alive.html  cancel.html  error.html  index.html  list.html  submit.html  success.html  topic.html
