[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
chrono = "0.4.34"
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
rand = "0.8.5"
